--- a/Geral.html
+++ b/Geral.html
@@ -36,28 +36,28 @@
     <!-- Linha produtos 1 -->
     <div class="tamanho_prod">
       <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-      <h3 style="margin-top: 3%;">Renata Raimunda Ayla da Rocha</h3>
+      <h3 style="margin-top: 3%;">Renata Ayla da Rocha</h3>
       <p>Ativa</p>
       <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente01.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Isadora</h3>
+    <h3 style="margin-top: 3%;">Catarina Alícia Rodrigues</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente02.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Maria</h3>
+    <h3 style="margin-top: 3%;">Olivia Renata Sales</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente03.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Francieli</h3>
+    <h3 style="margin-top: 3%;">Sarah Silva Castro</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente04.html'">Consultar</button>
   </div>
@@ -65,28 +65,28 @@
   <!-- Linha produtos 2 -->
     <div class="tamanho_prod">
       <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-      <h3 style="margin-top: 3%;">Fernanda</h3>
+      <h3 style="margin-top: 3%;">Cristiane Pietra Moura</h3>
       <p>Ativa</p>
       <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente05.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Ana</h3>
+    <h3 style="margin-top: 3%;">Ana Paula da Silva</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente06.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Eliza</h3>
+    <h3 style="margin-top: 3%;">Juliana Ferreira</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente07.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Larissa</h3>
+    <h3 style="margin-top: 3%;">Beatriz Almeida</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente08.html'">Consultar</button>
   </div>
@@ -94,28 +94,28 @@
     <!-- Linha produtos 3 -->
     <div class="tamanho_prod">
       <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-      <h3 style="margin-top: 3%;">Leticia</h3>
+      <h3 style="margin-top: 3%;">Helena Cardoso</h3>
       <p>Ativa</p>
       <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente09.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Patricia</h3>
+    <h3 style="margin-top: 3%;">Laura Martins</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente10.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Nicoli</h3>
+    <h3 style="margin-top: 3%;">Heloísa Pereira</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente11.html'">Consultar</button>
   </div>
 
   <div class="tamanho_prod">
     <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
-    <h3 style="margin-top: 3%;">Roberta</h3>
+    <h3 style="margin-top: 3%;">Gabriela Nunes</h3>
     <p>Ativa</p>
     <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente12.html'">Consultar</button>
   </div>
