--- a/cliente01.html
+++ b/cliente01.html
@@ -35,7 +35,7 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="Renata Raimunda Ayla da Rocha">
+      <input type="text" class="caixinha" value="Renata Ayla da Rocha">
       <p class="txt"><b>Data de nascimento:</b></p>
       <input type="date" class="caixinha" value="2002-10-09">
       <p class="txt"><b>CPF:</b></p>
@@ -45,14 +45,14 @@
       <p class="txt"><b>Endereço:</b></p>
       <input type="text" class="caixinha" value="Rua Thomaz Sarbo Langoni, 127, Campinas/SP">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="renata_raimunda_darocha@fransystems.com.br">
+      <input type="email" class="caixinha" value="renata_raimunda_darocha@gmail.com.br">
       <p class="txt"><b>Anotações:</b></p>
       <textarea type="text" class="anotacoes" value="anotacoes">
-        1x Calça jeans, tamanho G - R$ 199,00
-        1x Short jeans preto, tamanho G - R$ 89,00
-        1x Vestido verde, tamanho G - R$ 209,00</textarea>
+        1x Calça jeans, tamanho G - R$ 129,00
+        1x Calça jeans, tamanho G - R$ 149,00
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="R$ 497,00">
+      <input type="text" class="caixinha" id="vlr" value="R$ 278,00">
     </div>
 
     <div class="btnedit">
