--- a/cliente02.html
+++ b/cliente02.html
@@ -35,21 +35,23 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Catarina Alícia Rodrigues">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
+      <input type="date" class="caixinha" value="1995-12-08">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="266.131.378-80">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="47 98624-5966">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Rua Vicente Zorrer, 99, Porto Alegre/RS">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
+      <input type="email" class="caixinha" value="catarina.alicia.rodrigues@gmail.com">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
+      <textarea type="text" class="anotacoes" value="">
+        1x Calça jeans, tamanho M - R$ 209,00
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
+      <input type="text" class="caixinha" id="vlr" value="R$ 209,00">
     </div>
 
     <div class="btnedit">
