--- a/cliente03.html
+++ b/cliente03.html
@@ -33,24 +33,29 @@
       </div>
 
     
-    <div class="infcliente">
-      <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
-      <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
-      <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
-      <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
-    </div>
+      <div class="infcliente">
+        <p class="txt"><b>Nome completo:</b></p>
+        <input type="text" class="caixinha" value="Olivia Renata Sales">
+        <p class="txt"><b>Data de nascimento:</b></p>
+        <input type="date" class="caixinha" value="21/10/1989">
+        <p class="txt"><b>CPF:</b></p>
+        <input type="tel" class="caixinha" value="647.617.442-86">
+        <p class="txt"><b>Numero de Celular:</b></p>
+        <input type="tel" class="caixinha" value="71 99165-3109">
+        <p class="txt"><b>Endereço:</b></p>
+        <input type="text" class="caixinha" value="Travessa do Oriente, 100, Salvador/BA">
+        <p class="txt"><b>Email:</b></p>
+        <input type="email" class="caixinha" value="oliviasarahsales@gmail.com.br">
+        <p class="txt"><b>Anotações:</b></p>
+        <textarea type="text" class="anotacoes" value="">
+          1x Short jeans, branco, tamanho P - R$ 89,99
+          1x Short jeans, branco, tamanho M - R$ 109,99
+          1x Blusa, Azul e branca, tamanho M - R$ 59,99
+          1x Blusa, preta, tamanho M - R$ 79,99
+        </textarea>
+        <p class="txt"><b>A pagar:</b></p>
+        <input type="text" class="caixinha" id="vlr" value="R$ 339,96">
+      </div>
 
     <div class="btnedit">
           <button type="button" class="btn btn-success" onclick="save()">Salvar alterações</button>
