--- a/cliente04.html
+++ b/cliente04.html
@@ -35,21 +35,26 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Sarah Silva Castro">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
+      <input type="date" class="caixinha" value="04/03/2000">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="246.887.422-66">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="42 98608-6648">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Rua Caetano Vendrami, 345, Sorocaba/SP">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
+      <input type="email" class="caixinha" value="sarah.castro@hotmail.com">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
+      <textarea type="text" class="anotacoes" value="">
+        1x Blusa, Azul, tamanho M - R$ 59,99
+        1x Blusa, verde e branca, tamanho M - R$ 69,99
+        1x Blusa, Rosa, tamanho M - R$ 59,99
+        1x Blusa, Amarela e preta, tamanho M - R$ 89,99
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
+      <input type="text" class="caixinha" id="vlr" value="R$ 279,96">
     </div>
 
     <div class="btnedit">
