--- a/cliente05.html
+++ b/cliente05.html
@@ -32,24 +32,26 @@
         <H1 class="pagar" id="vlrpagar"></H1>
       </div>
 
-    
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Cristiane Pietra Moura">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
+      <input type="date" class="caixinha" value="1978-03-04">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="823.183.633-07">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="98 98775-6994">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Rua Coronel Belchior, 34, São Luis/MA">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
+      <input type="email" class="caixinha" value="cristian.pm@hotmail.com">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
+      <textarea type="text" class="anotacoes" value="">
+        1x Blusa, Rosa, tamanho GG - R$ 80,00
+        1x Vestido, Preto, tamanho G - R$ 220,00
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
+      <input type="text" class="caixinha" id="vlr" value="R$ 300,00">
     </div>
 
     <div class="btnedit">
