--- a/cliente06.html
+++ b/cliente06.html
@@ -35,21 +35,24 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Ana Paula Silva">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
+      <input type="date" class="caixinha" value="1990-01-01">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="123.456.789-00">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="11 99645-6465">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Rua Machado de Assis, 74, Rio bRanco/AC">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
+      <input type="email" class="caixinha" value="AnaPaula2312@gmail.com">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
+      <textarea type="text" class="anotacoes" value="">
+        1x Vestido, Preto, tamanho G - R$ 340,00
+        1x Bolsa, Couro, Vermelhar - R$ 289,00
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
+      <input type="text" class="caixinha" id="vlr" value="R$ 629,00">
     </div>
 
     <div class="btnedit">
