--- a/cliente07.html
+++ b/cliente07.html
@@ -35,21 +35,24 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Juliana Ferreira">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
+      <input type="date" class="caixinha" value="1991-07-03">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="123.456.789-02">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
+      <input type="tel" class="caixinha" value="31 99867-3213">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
+      <input type="text" class="caixinha" value="Travessa Belo Horizonte, 567, Sobral/CE">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
+      <input type="email" class="caixinha" value="FerreiraJuliana90@hotmail.com">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
+      <textarea type="text" class="anotacoes" value="">
+        1x Blusa, Verde, tamanho M - R$ 100,00
+        1x Vestido, Preto, tamanho M - R$ 220,00
+      </textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
+      <input type="text" class="caixinha" id="vlr" value="R$ 320,00">
     </div>
 
     <div class="btnedit">
