--- a/cliente09.html
+++ b/cliente09.html
@@ -33,24 +33,27 @@
       </div>
 
     
-    <div class="infcliente">
-      <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
-      <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
-      <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
-      <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
-    </div>
+      <div class="infcliente">
+        <p class="txt"><b>Nome completo:</b></p>
+        <input type="text" class="caixinha" value="Helena Cardoso">
+        <p class="txt"><b>Data de nascimento:</b></p>
+        <input type="date" class="caixinha" value="2001-12-14">
+        <p class="txt"><b>CPF:</b></p>
+        <input type="tel" class="caixinha" value="512.123.871-07">
+        <p class="txt"><b>Numero de Celular:</b></p>
+        <input type="tel" class="caixinha" value="98 98775-6675">
+        <p class="txt"><b>Endereço:</b></p>
+        <input type="text" class="caixinha" value="Beco Pilar, 456, Manaus/AM">
+        <p class="txt"><b>Email:</b></p>
+        <input type="email" class="caixinha" value="hel.c.2001@hotmail.com">
+        <p class="txt"><b>Anotações:</b></p>
+        <textarea type="text" class="anotacoes" value="">
+          1x Blusa, Rosa, tamanho G - R$ 80,00
+          1x Vestido, azul, tamanho G - R$ 150,00
+        </textarea>
+        <p class="txt"><b>A pagar:</b></p>
+        <input type="text" class="caixinha" id="vlr" value="R$ 230,00">
+      </div>
 
     <div class="btnedit">
           <button type="button" class="btn btn-success" onclick="save()">Salvar alterações</button>
