--- a/cliente10.html
+++ b/cliente10.html
@@ -33,24 +33,27 @@
       </div>
 
     
-    <div class="infcliente">
-      <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
-      <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
-      <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
-      <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
-    </div>
+      <div class="infcliente">
+        <p class="txt"><b>Nome completo:</b></p>
+        <input type="text" class="caixinha" value="Laura Martins">
+        <p class="txt"><b>Data de nascimento:</b></p>
+        <input type="date" class="caixinha" value="1999-09-17">
+        <p class="txt"><b>CPF:</b></p>
+        <input type="tel" class="caixinha" value="612.715.871-12">
+        <p class="txt"><b>Numero de Celular:</b></p>
+        <input type="tel" class="caixinha" value="98 65235-6675">
+        <p class="txt"><b>Endereço:</b></p>
+        <input type="text" class="caixinha" value="Avenida Um, 123, Jaboatão dos Guararapes/PE">
+        <p class="txt"><b>Email:</b></p>
+        <input type="email" class="caixinha" value="Lauramar431@hotmail.com">
+        <p class="txt"><b>Anotações:</b></p>
+        <textarea type="text" class="anotacoes" value="">
+          1x Blusa, Verde, tamanho M - R$ 120,00    
+          1x Blusa, Vermelhar, tamanho M - R$ 120,00
+        </textarea>
+        <p class="txt"><b>A pagar:</b></p>
+        <input type="text" class="caixinha" id="vlr" value="R$ 240,00">
+      </div>
 
     <div class="btnedit">
           <button type="button" class="btn btn-success" onclick="save()">Salvar alterações</button>
