--- a/Cadastro.html
+++ b/Cadastro.html
@@ -34,7 +34,7 @@
       <p class="txt"><b>Data de nascimento:</b></p>
       <input type="text" placeholder="Digite a Data de nascimento" id="DataNascimento" class="caixinha">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" placeholder="Digite o CPF" id="CPF" class="caixinha">
+      <input type="tel" placeholder="Digite o CPF" id="CPF" class="caixinha">
       <p class="txt"><b>Numero de Celular:</b></p>
       <input type="tel" placeholder="Digite o Numero de Celular" id="NumeroCelular" class="caixinha">
       <p class="txt"><b>Endereço:</b></p>
@@ -65,17 +65,17 @@
 
   // Valida o CPF
   const cpf = document.getElementById("CPF").value;
-  const expressaoRegularCpf = /^\d{11}$/;
+  const expressaoRegularCpf = /^\d{3}.\d{3}.\d{3}-\d{2}$/;
   if (!expressaoRegularCpf.test(cpf)) {
-    alert("O CPF deve ter 11 dígitos.");
+    alert("O CPF deve estar no formato 000.000.000-00");
     return;
   }
 
   // Valida o número de celular
   const numeroCelular = document.getElementById("NumeroCelular").value;
-  const expressaoRegularNumeroCelular = /^\d{2}-\d{5}-\d{4}$/;
+  const expressaoRegularNumeroCelular = /^\d{2} \d{5}-\d{4}$/;
   if (!expressaoRegularNumeroCelular.test(numeroCelular)) {
-    alert("O número de celular deve estar no formato DDD-NNNN-NNNN.");
+    alert("O número de celular deve estar no formato DDD NNNN-NNNN.");
     return;
   }
 
