--- a/cliente12.html
+++ b/cliente12.html
@@ -33,24 +33,26 @@
       </div>
 
     
-    <div class="infcliente">
-      <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="">
-      <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="">
-      <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="">
-      <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="">
-      <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value=""></textarea>
-      <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="">
-    </div>
+      <div class="infcliente">
+        <p class="txt"><b>Nome completo:</b></p>
+        <input type="text" class="caixinha" value="Gabriela Nunes">
+        <p class="txt"><b>Data de nascimento:</b></p>
+        <input type="date" class="caixinha" value="2005-03-30">
+        <p class="txt"><b>CPF:</b></p>
+        <input type="tel" class="caixinha" value="219.213.534-54">
+        <p class="txt"><b>Numero de Celular:</b></p>
+        <input type="tel" class="caixinha" value="63 97321-2132">
+        <p class="txt"><b>Endereço:</b></p>
+        <input type="text" class="caixinha" value="Rua Francisco Gomes, 741, Rio Branco/AC">
+        <p class="txt"><b>Email:</b></p>
+        <input type="email" class="caixinha" value="gabi.nunes5@hotmail.com">
+        <p class="txt"><b>Anotações:</b></p>
+        <textarea type="text" class="anotacoes" value="">
+          1x Bolsa couro, Verde - R$ 350,00
+        </textarea>
+        <p class="txt"><b>A pagar:</b></p>
+        <input type="text" class="caixinha" id="vlr" value="R$ 350,00">
+      </div>
 
     <div class="btnedit">
           <button type="button" class="btn btn-success" onclick="save()">Salvar alterações</button>
