--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <footer class="py-4 bg-dark text-white" id="rpegeral">
       <div class="container">
         <div class="text-center py-2">
-          <p> Copyright &copy; 2023 - Chá de moda</p>
+          <p> &copy; 2023 - Chá de moda</p>
         </div>
       </div>
     </footer>
