--- a/cliente01.html
+++ b/cliente01.html
@@ -39,9 +39,9 @@
       <p class="txt"><b>Data de nascimento:</b></p>
       <input type="date" class="caixinha" value="2002-10-09">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="08821660346">
+      <input type="tel" class="caixinha" value="088.216.603-46">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="19981477141">
+      <input type="tel" class="caixinha" value="19 98147-7141">
       <p class="txt"><b>Endereço:</b></p>
       <input type="text" class="caixinha" value="Rua Thomaz Sarbo Langoni, 127, Campinas/SP">
       <p class="txt"><b>Email:</b></p>
