--- a/cliente03.html
+++ b/cliente03.html
@@ -37,7 +37,7 @@
         <p class="txt"><b>Nome completo:</b></p>
         <input type="text" class="caixinha" value="Olivia Renata Sales">
         <p class="txt"><b>Data de nascimento:</b></p>
-        <input type="date" class="caixinha" value="21/10/1989">
+        <input type="date" class="caixinha" value="2002-10-21">
         <p class="txt"><b>CPF:</b></p>
         <input type="tel" class="caixinha" value="647.617.442-86">
         <p class="txt"><b>Numero de Celular:</b></p>
