--- a/cliente04.html
+++ b/cliente04.html
@@ -37,7 +37,7 @@
       <p class="txt"><b>Nome completo:</b></p>
       <input type="text" class="caixinha" value="Sarah Silva Castro">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="04/03/2000">
+      <input type="date" class="caixinha" value="1999-11-19">
       <p class="txt"><b>CPF:</b></p>
       <input type="tel" class="caixinha" value="246.887.422-66">
       <p class="txt"><b>Numero de Celular:</b></p>
